Changed text-align on content sections to left, fixed relevant bugs that came with that since some icon sections relied on that rule for centering icons. Also fixed 'our companies' images for mobile view, as they had a set width and were bleeding out.

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -31,8 +31,8 @@
     background-color: $biscay; 
     color: $hint-of-red;
     margin-bottom: -75px;
-    padding: 50px;
-    text-align: center;
+    padding: 50px 15px;
+    text-align: left;
     a {
         color: $heather;
         &:hover {
